# payments

./: .gitignore  pyproject.toml
accounts/: urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login_form.html  profile.html  signup_form.html
mall/: admin.py  forms.py  models.py  urls.py  views.py
mall/management/commands/: load_products.py
mall/migrations/: 0001_initial.py  0002_product_created_at_product_updated_at.py  0003_alter_product_options_cartproduct_and_more.py  0004_order_orderedproduct_order_product_set_order_user.py  0005_orderpayment.py
mall/templates/mall/: cart_detail.html  order_detail.html  order_pay.html  product_list.html
mall_test/: apps.py  forms.py  models.py  urls.py  views.py
mall_test/migrations/: 0001_initial.py  0002_alter_payment_status.py
mall_test/templates/mall_test/: payment_detail.html  payment_form.html  payment_pay.html
mysite/: settings.py  urls.py
templates/: base.html  root.html
