[tool.poetry]
name = "payments"
version = "0.1.0"
description = ""
authors = ["yjinjo <yjinjo@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.1.7"
python-dotenv = "^1.0.0"
black = "23.1.0"
djlint = "1.19.16"
django-debug-toolbar = "3.8.1"
django-environ = "0.9.0"
django-bootstrap5 = "22.2"
iamport-rest-client = "0.9.0"
Pillow = "9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
